--- a/fly.toml
+++ b/fly.toml
@@ -2,11 +2,13 @@
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
-
 app = 'troopsto'
 primary_region = 'dfw'
 
 [build]
+
+[env]
+  PORT = "8080"
 
 [http_service]
   internal_port = 8080
