--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,15 +3,16 @@ spring:
     name: troops
 
   datasource:
-    url: ${DATABASE_URL:jdbc:postgresql://localhost:5432/troops}
-    # Spring Boot will automatically parse username/password from DATABASE_URL
-    # if it's in the format: postgresql://user:pass@host:port/db
+    url: jdbc:h2:mem:testdb
+    driver-class-name: org.h2.Driver
+    username: sa
+    password: 
 
   jpa:
     generate-ddl: false
     hibernate:
       ddl-auto: none
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    database-platform: org.hibernate.dialect.H2Dialect
 
   docker:
     compose:
