--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,8 +3,7 @@ spring:
     name: troops
 
   datasource:
-    url: ${DATABASE_URL:jdbc:h2:mem:testdb}
-    # Spring Boot auto-parses username/password from DATABASE_URL
+    url: ${JDBC_DATABASE_URL:${DATABASE_URL:jdbc:h2:mem:testdb}}
 
   jpa:
     generate-ddl: false
