--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,27 +3,23 @@ spring:
     name: troops
 
   datasource:
-    url: ${JDBC_DATABASE_URL:${DATABASE_URL:jdbc:h2:mem:testdb}}
+    url: jdbc:h2:mem:testdb
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
 
   jpa:
     generate-ddl: false
     hibernate:
-      ddl-auto: none
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
-    properties:
-      hibernate:
-        jdbc:
-          lob:
-            non_contextual_creation: true
+      ddl-auto: update
+    database-platform: org.hibernate.dialect.H2Dialect
 
   docker:
     compose:
       enabled: false
 
   flyway:
-    enabled: true
-    locations: classpath:db/migration
-    baseline-on-migrate: true
+    enabled: false
 
 server:
   address: 0.0.0.0
