--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,14 +2,11 @@ spring:
   application:
     name: troops
 
-  datasource:
-    url: ${DATABASE_URL:jdbc:h2:mem:testdb}
-
   jpa:
-    generate-ddl: false
     hibernate:
       ddl-auto: none
     database-platform: org.hibernate.dialect.PostgreSQLDialect
+    show-sql: true
     properties:
       hibernate:
         jdbc:
